# normcore

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: rust-ci.yml
formal/: README.md  draft-vs-implementation.md
formal/draft/: chatgpt-feedback-resolution.md  open-formalization-questions.md  property-map.md  spec.cfg  spec.tla  trace-schema.md
formal/implementation/: grounding-accounting-property-map.md  grounding-accounting-trace-schema.md  grounding_accounting.cfg  grounding_accounting.tla  open-formalization-questions.md  property-map.md  spec.cfg  spec.tla  trace-schema.md
formal/implementation/states/26-02-07-21-07-50/: spec-0.st
formal/implementation/states/26-02-07-21-11-41/: spec-0.st
scripts/: check_external_grounds_weather_history.sh  check_grounds_weather_ny.sh  codex_exec_events_to_conversation.py  evaluate_history.sh  finalize_agent.sh  rollout_to_conversation.py  run_normcore_eval.sh  run_readme_agent.sh  run_test_agent.sh  smoke_codex_pypi_normcore.sh
scripts/rust/: check_external_grounds_weather_history_rs.sh  check_grounds_weather_ny_rs.sh  evaluate_history_rs.sh
src/evaluator/: evaluator.py
src/evaluator/models/: __init__.py  evaluator.py
src/evaluator/normative/: axiom_checker.py  ground_matcher.py  license_deriver.py  modality_detector.py  statement_extractor.py
src/link_builder/: __init__.py  cli.py  link_matcher.py  models.py  service.py
src/normcore/: __init__.py  cli.py  evaluator.py  logging.py
src/normcore-rs/: Cargo.toml  README.md
src/normcore-rs/src/: citations.rs  evaluator.rs  json.rs  lib.rs  main.rs  models.rs
src/normcore-rs/src/normative/: axiom_checker.rs  extractor.rs  ground_matcher.rs  knowledge_builder.rs  license_deriver.rs  mod.rs  modality_detector.rs  models.rs
src/normcore-rs/tests/: evaluate_scenarios.rs
src/normcore/citations/: __init__.py  coerce.py  grounds.py  openai_adapter.py
src/normcore/models/: __init__.py  evaluator.py  links.py  messages.py  openai_citations.py
src/normcore/normative/: __init__.py  axiom_checker.py  ground_matcher.py  knowledge_builder.py  license_deriver.py  modality_detector.py  models.py  statement_extractor.py
tests/: AGENTS.md  conftest.py
tests/citations/: test_coerce.py  test_grounds.py
tests/evaluator/: test_evaluator_aggregate.py  test_evaluator_core.py  test_evaluator_grounds_input.py  test_evaluator_helpers.py
tests/models/: test_normative_init.py  test_normcore_public_api.py  test_openai_citations_adapter.py  test_public_models.py
tests/normative/: test_axiom_checker.py  test_ground_matcher.py  test_knowledge_builder.py  test_license_deriver.py  test_modality_detector.py  test_models.py  test_statement_extractor.py
